# apass

./: .gitmodules  CMakeLists.txt  README.md  run-pipeline.sh
data/: apass_field_centers.txt  sro_apass_centers.txt
data/apass-bad-data/: 2018-06-22-copy.sh  2018-06-22-replacement  bad-nights-2018-05-20.txt  bad-nights-fields.txt
data/apass-bad-nights/: 2018-05-20-north-delete.txt  2018-05-20-removal.txt  2018-05-20-south-delete.txt
data/cmc14/: .gitignore  CMC14_10068.txt
data/other-test-data/: malformed.fred
data/overlap-test-data/: overlap-data.fred
data/panstarrs/: README.md  panstarrs_308.csv  panstarrs_310.csv
data/sdss/: README.md  sdss_308.csv  sdss_309.csv  sdss_310.csv  sdss_311.csv
data/sro-test-data/: 141023.fred  141024.fred  141025.fred  141108.fred  141110.fred  141111.fred  141126.fred  141127.fred  141223.fred  141228.fred  150104.fred  150205.fred  150211.fred  150422.fred  150509.fred  150510.fred  150524.fred  150613.fred  150614.fred  150622.fred  161110.fred  161115.fred  161118.fred  161119.fred  170514.fred  170520.fred  170521.fred  170524.fred  170528.fred  170924.fred  170925.fred  170926.fred  171007.fred  171009.fred  171010.fred  171127.fred  README.md
fortran/: CMakeLists.txt  acount.f  bigmiss.f  compare_apass.f  dofind.f  doinit.f  doparm.f  dophot.f  doread.f  dosky.f  extract_region.f  filcon.f  filepp  filepp.f  filextr.f  filplot.f  filstat.f  filtag.f  filtran.f  hepp.f  hphot.f  makefiltran  missing_files.f  mmm.f  writehead.f
fortran/aahlib/: CMakeLists.txt  bell.f  disply.f  extrd.f  getfilt.f  helcor.f  jday.f  lin.f  makeaah  makeaah.org  nblank.f  openit.f  prompt.f  rdnames.f  solve2.f  solve3.f  ucase.f  wrtnames.f
gnuplot/: plot_coverage.gp  plot_field_coverage.gp
python/: README.md  apass-rect-to-data.py  apass.py  apass_rect_to_data.py  apass_types.py  badfiles.py  border_info.py  check-results.py  check_results.py  cmc14.py  comp_file.py  compare_fields.py  dat.py  dump-fredbin.py  dump_fredbin.py  dump_star_data.py  dump_zone_info.py  find_broken_zones.py  find_zones.py  fix-zone-overlaps.py  fix_zone_overlaps.py  flag_bad_data.py  fred-to-zone.py  fred.py  fred_to_zone.py  idea.md  inspect_dat.py  make-zones.py  make_zones.py  merge-fred.py  merge.py  modify_fredbin.py  panstarrs.py  plot-coverage.py  plot-fred.py  plot-zone.py  plot_coverage.py  plot_zone.py  purge_night.py  quadtree.py  (+17 more)
python/test-code/: fredbin_test.py  ndarray_test.py
tests/: individual-tests.sh  overlaps.sh  python-pipeline.sh
